--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -1,6 +1,23 @@
-<h3>Lista de Personajes</h3>
+<h4>Listado</h4>
 <ul class="list-group">
-    <li class="list-group-item" *ngFor="let character of characters">
-        {{ character.name }} - <strong>Power: </strong> {{ character.power }}
-    </li>
+  <li
+    *ngFor="
+      let character of characterList;
+      let i = index;
+      let isFirst = first;
+      let isLast = last;
+      let isEven = even;
+      let isOdd = odd
+    "
+    class="list-group-item d-flex justify-content-between align-items-center"
+    [ngClass]="{ 'list-group-item-dark': isEven }"
+  >
+    <div>
+      <span class="text-primary">{{ i + 1 }}. </span>
+      <span>{{ character.name }} - </span>
+      <strong>Power: </strong>
+      <span>{{ character.power | number }}</span>
+    </div>
+    <button class="btn btn-danger" (click)="deleteCharacterById( character.id )">X</button>
+  </li>
 </ul>
