--- a/src/app/heroes/list/list.component.html
+++ b/src/app/heroes/list/list.component.html
@@ -1,9 +1,17 @@
-<h3>Listado de Heroes</h3>
+<h3>Lista de Heroes</h3>
 
-<h3>Héroe borrado <small class="text-danger"></small></h3>
+<div *ngIf="deletedHero; else nothingWasDeleted">
+  <h3>Heroe borrado <small class="text-danger"> {{ deletedHero }} </small></h3>
+</div>
+
+<ng-template #nothingWasDeleted>
+  <h3>No ha borrado nada</h3>
+</ng-template>
+
+<button class="btn btn-outline-danger" (click)="removeLastHero()" *ngIf="heroNames.length > 0">
+  Borrar último heroe
+</button>
 
 <ul class="list-group">
-    <li class="list-group-item" *ngFor="let name of heroNames">
-        {{ name }}
-    </li>
+  <li class="list-group-item" *ngFor="let name of heroNames">{{ name }}</li>
 </ul>
